# fapptap

./: .favorites.json  .gitignore  .gitmessage  DEVELOPMENT_SUMMARY_JAN2025.md  DEV_REALITY_CHECK_SEPT2025.md  FFplay-Instant-Musoc-Vidoes.md  Issues.md  LOGS.md  README.md  TAURI_V2_COMPREHENSIVE_KNOWLEDGE_BASE.md  TAURI_V2_KNOWLEDGE_BASE.md  THINGS-TO-REMEMVER.md  TODO.md  UI_FIXES_SUMMARY.md  UPTEMPO-HELP.md  analyze_cutlist.py  check_cutlist.py  check_db.py  check_downbeats.py  cline.json  compare-ffplay.ts  debug_cli_args.py  debug_cutlist_duration.py  debug_cutlist_generation.py  debug_cutlist_loading.py  debug_cutlist_paths.py  debug_paths.py  debug_plp_values.py  diagnose_tempo_curve.py  fapptap.code-workspace  final_validation.py  index.html  log.md  mcps-copilot.json  next-steps.md  package-lock.json  package.json  package.json.backup.new  quick_test.py  requirements.txt  (+24 more)
.clinerules/: Fapptap.md  FileSystem-MCP.md  Git-MCP.md  Memory.md  Process-MCP.md  SQL-Lite.md  Software-Planning-MCP.md  SuperMemory.md
.devcontainer/: devcontainer.json
.github/: MODES.yml  copilot-instructions.md
analysis/: beats.json  build_cutlist.py  compute_beats.py  detect_shots.py  (+5 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json.kill
src-tauri/binaries/ffmpeg/: Program.cs
src-tauri/binaries/ffprobe/: Program.cs
src-tauri/binaries/worker/: Program.cs  worker.csproj
src-tauri/capabilities/: default.json  default.jsonkill  main-backup.json  main.json
src-tauri/src/: file_scanner.rs  job_queue.rs  main.rs  media_cache.rs  probe_cache.rs  thumbnail_generator.rs
(+1235 files in other folders)
