[package]
name = "fapptap-ui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "fapptap_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.8.4", features = ["protocol-asset"] }         # or "2.0"
tauri-plugin-shell = "2.3.1"
tauri-plugin-dialog = "2.3.3"
tauri-plugin-fs = "2.4.2"
tauri-plugin-store = "2.4.0"
tauri-plugin-opener = "2.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Performance deps
rusqlite = { version = "0.31", features = ["bundled"] }
walkdir = "2.5"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
notify = "6.1"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha1 = "0.10"
rayon = "1.10"

